network_policies/Eaxample02/namespaces.yml
apiVersion: v1  
kind: Namespace 
metadata: 
  name: qa-team 
  labels: 
    name: qa-team

---
apiVersion: v1  
kind: Namespace 
metadata: 
  name: prod-team 
  labels: 
    name: prod-team
