network_policies/Eaxample02/shopping_pod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: shopping-pod 
  namespace: prod-team
  labels: 
    app: shopping
spec: 
  containers:
    - name: shopping-container 
      image: nginx 
      ports: 
        - containerPort: 80
