network_policies/Eaxample02/net_policy-qa.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: net-policy
  namespace: qa-team
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes: 
  - Ingress 
  - Egress 
  ingress: 
  - from:
    - namespaceSelector:
        matchLabels:
          name: prod-team
    - podSelector:
        matchLabels:
          app: shopping
    ports: 
    - protocol: TCP
      port: 80
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: prod-team 
    - podSelector:
        matchLabels:
          app: payment
    ports: 
    - protocol: TCP
      port: 80
